1. fixed an issue when there would be whitespace in the 'triangle' dropdown menus and the dropdown menu would stutter when dropping down
2.  slight change in style of "Delete Bookmarks" button

3. made scrollbars slimmer

4. the arabic text will not go below footer in small screens

--- a/public/public_assets/css/custom.css
+++ b/public/public_assets/css/custom.css
@@ -45,8 +45,8 @@ section.audio_player section.control_panel{
 		overflow: auto;
 	}
 	::-webkit-scrollbar {
-width: 12px;
-height: 12px;
+width: 5px;
+height: 5px;
 }
 ::-webkit-scrollbar-thumb {
 background: yellowgreen;  
